[n] Added details_page_name field
